apps/base/test-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      securityContext:
        fsGroup: 33
        runAsUser: 33
        runAsGroup: 33
      imagePullSecrets:
        - name: harbor-credentials
      containers:
        - name: test-app
          image: harbor.undefinedlab.uk/test/test-app:latest@sha256:dcadb74079a82b2c1ecad6492b838d7831dea9b2fbbc1bb4de733325a69a4875 # {"$imagepolicy": "flux-system:test-app-policy"}
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
