apps/base/test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
spec:
  ports:
    - port: 3000
  selector:
      app: test-app
  type: ClusterIP
